<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinActivity">

    <View
        android:id="@+id/blank_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/join_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/join_name"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:background="@drawable/input_id"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/blank_view" />

    <EditText
        android:id="@+id/join_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/join_id"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:background="@drawable/input_id"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/join_name" />

    <EditText
        android:id="@+id/join_pw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/join_pw"
        android:background="@drawable/input_id"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/join_id" />

    <EditText
        android:id="@+id/join_check_pw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_id"
        android:layout_margin="16dp"
        android:hint="@string/check_pw"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/join_pw" />

    <Button
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/join_color"
        android:text="@string/SignUp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/join_click"
        app:layout_constraintTop_toBottomOf="@id/join_check_pw"
        android:id="@+id/signup_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>